# SyncScheduler

./: README.md
sync_scheduler/: .gitignore  Cargo.toml  build.rs
sync_scheduler/.cargo/: config.toml
sync_scheduler/components/: custom-button.slint  login-window.slint  modal-window.slint  selected-date-sidebar.slint  ui.slint
sync_scheduler/components/events/: date-time-picker.slint  dynamic-events.modal.slint  static-events.modal.slint  suggest-dynamics-list.slint
sync_scheduler/src/: main.rs
sync_scheduler/src/calendar/: calendar_data.helpers.rs  calendar_state.rs
sync_scheduler/src/components/: modal-window.slint  ui.slint
sync_scheduler/src/database/: db_functions.rs
sync_scheduler/src/db/: events.db.rs
sync_scheduler/src/gui_render/: calendar_render.rs  data_formatter.rs  selected_date.rs  slots.render.rs
sync_scheduler/src/helpers/: calendar.helpers.rs  events.helpers.rs
sync_scheduler/src/helpers/events/: dynamic_events.helpers.rs  slots.helpers.rs  static_events.helpers.rs
sync_scheduler/src/store/: calendar.store.rs  events.store.rs  slots.store.rs  store.types.rs
sync_scheduler/src/ui_callbacks/: calback_register.rs
sync_scheduler/src/ui_callbacks/callbacks/: calendar.callback.rs  create_dynamic_event.callback.rs  create_static_event.callback.rs  login.callback.rs  logout.callback.rs  registration.callback.rs  slots_searching.callback.rs
