[package]
name = "sync_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
icalendar = "0.16.13"
slint = "1.10.0"
dotenv = "0.15"
uuid = {version =  "1.3.1", features = ["v4"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
slint-build = "1.10.0"
