[package]
name = "sync_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
icalendar = "0.16.13"
slint = "1.10.0"
slint-viewer = "1.10.0"

[build-dependencies]
slint-build = "1.10.0"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = ["v4"]
